fix gallery loading icon align

--- a/css/projects.css
+++ b/css/projects.css
@@ -2,6 +2,7 @@
     transition: .5s ease;
     width: 100%;
     height: 100%;
+    margin: auto;
     top: 0;
     left: 0;
     position: fixed;
@@ -13,9 +14,11 @@
   }
   
   #loading-image {
-    position: absolute;
-    top: 40%;
-    margin: 0 auto;
+    display: flex;
+
+    position: relative;
+    top: 45%;
+    margin: auto;
     z-index: 100;
     
   }
